Changed the handling of wetgoop Now the script will return wetgoop if no other recipe could be met. Wetgoop is not considered a recipe anymore.

--- a/recipes.yml
+++ b/recipes.yml
@@ -210,9 +210,9 @@ unagi:
       - {eel: null, eel_cooked: null, pondeel: null}
   priority: 20
 
-wetgoop: #fallback
-  requirement: null
-  priority: -2
+#wetgoop: #fallback
+#  requirement: null
+#  priority: -2
 
 flowersalad:
   requirement:
